logs/watchdog_20251012_1145.log
[12/10/2025 11:45:01,63] START WATCHDOG 
  File "C:\AUTOMAZIONE\odin_watchdog_mt5.py", line 192
    elif step >= 3:
    ^^^^
SyntaxError: invalid syntax
[12/10/2025 11:45:01,90] END WATCHDOG 
